# python-job-scraper

./: README.md  main.py  pyproject.toml
templates/: home.html  search.html
