[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "day-thirteen-and-fourteen"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
requests = "^2.23"
beautifulsoup4 = "^4.9"
[tool.poetry.dev-dependencies]
